--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <li>CSS</li>
         <li>JAVA SCRIPT</li>
     </ul>
+            
+      <img src="html.png" width="50px" height="50px">
+      <img src="css.png" width="50px" height="50px">
+      <img src="java script.jfif" width="50px" height="50px">
         
     <h2> Skills </h2>
      <ul> 
